--- a/app/src/main/res/drawable/wavy_login.xml
+++ b/app/src/main/res/drawable/wavy_login.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="138.75">
 
     <path android:pathData="M401.5 119C457.664 124.594 505.839 97.7005 523 81.3857V-19L-9 -19V102.362C5.14508 73.195 152 63.8591 219.5 74.9999C271 83.4999 359 114.767 401.5 119Z"
-            android:fillColor="#00796B"/>
+            android:fillColor="#007859"/>
 </vector>
