--- a/app/src/main/res/drawable/wavy_login_mirorred.xml
+++ b/app/src/main/res/drawable/wavy_login_mirorred.xml
@@ -2,9 +2,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="200dp"
     android:height="58.75dp"
-    android:viewportWidth="532"
+    android:viewportWidth="523"
     android:viewportHeight="138.75">
 
-        <path android:pathData="M54.5 0.752486C-1.66422 -4.84115 -49.8387 22.0519 -67 38.3667V138.752H465V17.3905C450.855 46.5573 304 55.8933 236.5 44.7525C185 36.2525 97 4.98524 54.5 0.752486Z"
-            android:fillColor="#00796B"/>
+        <path
+            android:pathData="M121.5 19.75C65.336 14.156 17.161 41.0495 0 57.3643V157.75L532 157.75V36.388C517.855 65.555 371 74.891 303.5 63.75C252 55.25 164 23.983 121.5 19.75Z"
+            android:fillColor="#007859" />
 </vector>
