--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Aji" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">#005F47</item>
+        <item name="colorPrimaryVariant">#004032</item>
+        <item name="colorSecondary">#007859</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorOnSecondary">#FFFFFF</item>
+        <item name="android:statusBarColor">#004032</item>
+        <item name="android:windowBackground">#121212</item>
+        <item name="android:navigationBarColor">#005F47</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 </resources>
